--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 * {
-  margin: 0%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,33 +15,66 @@ body {
   background-position: center;
 }
 
-.card img {
-  border-radius: 5px;
-  width: 420px;
-  display: block;
-  margin: 0 auto 20px;
-}
-
-p {
-  color: aliceblue;
-  padding: 1%;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-h1 {
-  padding: 2%;
-  color: aliceblue;
+.container {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .card {
   padding: 40px;
-  justify-content: center;
-  width: 420px;
-  height: auto;
-  border-radius: 50px;
+  border-radius: 20px;
   border: 4px solid #fffefc;
   background-color: rgba(16, 14, 47, 0.604);
   box-shadow: 0 20px 40px #380472;
+  display: flex; /* Membuat konten dalam kartu terletak di sepanjang sumbu vertikal */
+  flex-direction: column; /* Menata konten dalam kartu menjadi satu kolom */
+  align-items: center; /* Pusatkan konten kartu secara horizontal */
+}
+
+.card img {
+  border-radius: 5px;
+  width: 200px;
+  margin-bottom: 20px; /* Tambahkan jarak antara gambar dan formulir login */
+}
+
+.login-box {
+  width: 250px;
+}
+
+h1 {
+  color: aliceblue;
+  margin-bottom: 20px;
+}
+
+.input-group {
+  margin-bottom: 20px;
+}
+
+.input-group label {
+  color: aliceblue;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
 }
